[gd_scene load_steps=5 format=3 uid="uid://d2g140kaksjpe"]

[ext_resource type="Script" uid="uid://cekui0332phep" path="res://scripts/game_world.gd" id="1_game_world"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_color = Color(0.9, 0.9, 0.9, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 20
font_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3"]
font_color = Color(0.7, 0.7, 0.8, 1)

[node name="GameWorld" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_world")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.06, 0.08, 1)

[node name="GameUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusBar" type="Panel" parent="GameUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="StatusVBox" type="VBoxContainer" parent="GameUI/StatusBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerInfo" type="HBoxContainer" parent="GameUI/StatusBar/StatusVBox"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="GameUI/StatusBar/StatusVBox/PlayerInfo"]
layout_mode = 2
text = "Player"
label_settings = SubResource("LabelSettings_1")

[node name="PlayerHealth" type="Label" parent="GameUI/StatusBar/StatusVBox/PlayerInfo"]
layout_mode = 2
text = "HP: 100/100"
label_settings = SubResource("LabelSettings_1")

[node name="PlayerLevel" type="Label" parent="GameUI/StatusBar/StatusVBox/PlayerInfo"]
layout_mode = 2
text = "Level: 1"
label_settings = SubResource("LabelSettings_1")

[node name="PlayerSanity" type="Label" parent="GameUI/StatusBar/StatusVBox/PlayerInfo"]
layout_mode = 2
text = "Sanity: 50%"
label_settings = SubResource("LabelSettings_1")

[node name="GameContent" type="VBoxContainer" parent="GameUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="WelcomeLabel" type="Label" parent="GameUI/GameContent"]
layout_mode = 2
text = "Welcome to the Game World!"
label_settings = SubResource("LabelSettings_2")
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="GameUI/GameContent"]
layout_mode = 2
text = "This is where the main game content would be."
label_settings = SubResource("LabelSettings_3")
horizontal_alignment = 1

[node name="Instructions2" type="Label" parent="GameUI/GameContent"]
layout_mode = 2
text = "Press M to open the menu at any time."
label_settings = SubResource("LabelSettings_3")
horizontal_alignment = 1

[node name="ActionButtons" type="VBoxContainer" parent="GameUI/GameContent"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="GameUI/GameContent/ActionButtons"]
layout_mode = 2
text = "Save Game"

[node name="LoadButton" type="Button" parent="GameUI/GameContent/ActionButtons"]
layout_mode = 2
text = "Load Game"

[node name="BackToMenuButton" type="Button" parent="GameUI/GameContent/ActionButtons"]
layout_mode = 2
text = "Back to Main Menu"

[node name="MenuOverlay" type="Panel" parent="GameUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContent" type="VBoxContainer" parent="GameUI/MenuOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuTitle" type="Label" parent="GameUI/MenuOverlay/MenuContent"]
layout_mode = 2
text = "Game Menu"
label_settings = SubResource("LabelSettings_2")
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="GameUI/MenuOverlay/MenuContent"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="GameUI/MenuOverlay/MenuContent/MenuButtons"]
layout_mode = 2
text = "Resume Game"

[node name="SettingsButton" type="Button" parent="GameUI/MenuOverlay/MenuContent/MenuButtons"]
layout_mode = 2
text = "Settings"

[node name="SaveGameButton" type="Button" parent="GameUI/MenuOverlay/MenuContent/MenuButtons"]
layout_mode = 2
text = "Save Game"

[node name="LoadGameButton" type="Button" parent="GameUI/MenuOverlay/MenuContent/MenuButtons"]
layout_mode = 2
text = "Load Game"

[node name="MainMenuButton" type="Button" parent="GameUI/MenuOverlay/MenuContent/MenuButtons"]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="GameUI/MenuOverlay/MenuContent/MenuButtons"]
layout_mode = 2
text = "Quit Game"
